--- a/wildfire_prediction.ipynb
+++ b/wildfire_prediction.ipynb
@@ -2333,6 +2333,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 63960 entries, 0 to 63959\n",
+      "Data columns (total 32 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   ID             63960 non-null  object        \n",
+      " 1   lat            63960 non-null  float64       \n",
+      " 2   lon            63960 non-null  float64       \n",
+      " 3   burn_area      63960 non-null  float64       \n",
+      " 4   climate_aet    63960 non-null  int64         \n",
+      " 5   climate_def    63960 non-null  int64         \n",
+      " 6   climate_pdsi   63960 non-null  int64         \n",
+      " 7   climate_pet    63960 non-null  int64         \n",
+      " 8   climate_pr     63960 non-null  int64         \n",
+      " 9   climate_ro     63960 non-null  int64         \n",
+      " 10  climate_soil   63960 non-null  int64         \n",
+      " 11  climate_srad   63960 non-null  int64         \n",
+      " 12  climate_swe    63960 non-null  int64         \n",
+      " 13  climate_tmmn   63960 non-null  int64         \n",
+      " 14  climate_tmmx   63960 non-null  int64         \n",
+      " 15  climate_vap    63960 non-null  int64         \n",
+      " 16  climate_vpd    63960 non-null  int64         \n",
+      " 17  climate_vs     63960 non-null  int64         \n",
+      " 18  elevation      63960 non-null  float64       \n",
+      " 19  landcover_0    63960 non-null  float64       \n",
+      " 20  landcover_1    63960 non-null  float64       \n",
+      " 21  landcover_2    63960 non-null  float64       \n",
+      " 22  landcover_3    63960 non-null  float64       \n",
+      " 23  landcover_4    63960 non-null  float64       \n",
+      " 24  landcover_5    63960 non-null  float64       \n",
+      " 25  landcover_6    63960 non-null  float64       \n",
+      " 26  landcover_7    63960 non-null  float64       \n",
+      " 27  landcover_8    63960 non-null  float64       \n",
+      " 28  precipitation  63960 non-null  float64       \n",
+      " 29  date           63960 non-null  datetime64[ns]\n",
+      " 30  month          63960 non-null  int32         \n",
+      " 31  year           63960 non-null  int32         \n",
+      "dtypes: datetime64[ns](1), float64(14), int32(2), int64(14), object(1)\n",
+      "memory usage: 15.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2341,14 +2396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define input and output columns - you can play with adding or removing inputs to the model\n",
-    "X_train=train.drop(columns=['burn_area'])\n",
+    "X_train=train.drop(columns=['burn_area','ID','month','year','lat','lon','date'])\n",
     "y_train=train['burn_area']\n",
-    "X_valid=valid.drop(columns=['burn_area'])\n",
+    "X_valid=valid.drop(columns=['burn_area','ID','month','year','lat','lon','date'])\n",
     "y_valid=valid['burn_area']"
    ]
   },
@@ -2357,6 +2412,45 @@
    "metadata": {},
    "source": [
     "#### Linear Regression using RidgeCV\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mse: 0.0007377880411133035\n",
+      "r2_score: 0.14376810892470004\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.metrics import mean_squared_error,r2_score\n",
+    "\n",
+    "# Create and fit the model\n",
+    "model=RidgeCV()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "preds = model.predict(X_valid)\n",
+    "\n",
+    "# Score\n",
+    "mse= mean_squared_error(y_valid, preds)\n",
+    "r2=r2_score(y_valid,preds)\n",
+    "print(\"mse:\",mse)\n",
+    "print(\"r2_score:\",r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RandomForestClassifier"
    ]
   },
   {
