--- a/wildfire_prediction.ipynb
+++ b/wildfire_prediction.ipynb
@@ -2474,7 +2474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### RandomForestClassifier"
+    "#### RandomForestRegressor"
    ]
   },
   {
@@ -2514,9 +2514,357 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>climate_aet</th>\n",
+       "      <th>climate_def</th>\n",
+       "      <th>climate_pdsi</th>\n",
+       "      <th>climate_pet</th>\n",
+       "      <th>climate_pr</th>\n",
+       "      <th>climate_ro</th>\n",
+       "      <th>climate_soil</th>\n",
+       "      <th>...</th>\n",
+       "      <th>landcover_3</th>\n",
+       "      <th>landcover_4</th>\n",
+       "      <th>landcover_5</th>\n",
+       "      <th>landcover_6</th>\n",
+       "      <th>landcover_7</th>\n",
+       "      <th>landcover_8</th>\n",
+       "      <th>precipitation</th>\n",
+       "      <th>date</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0_2014-01-01</td>\n",
+       "      <td>-15.858835</td>\n",
+       "      <td>29.237029</td>\n",
+       "      <td>1146</td>\n",
+       "      <td>74</td>\n",
+       "      <td>-451</td>\n",
+       "      <td>1220</td>\n",
+       "      <td>120</td>\n",
+       "      <td>6</td>\n",
+       "      <td>212</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.416704</td>\n",
+       "      <td>0.023724</td>\n",
+       "      <td>0.530016</td>\n",
+       "      <td>0.013524</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.404243</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1_2014-01-01</td>\n",
+       "      <td>-15.858835</td>\n",
+       "      <td>29.487029</td>\n",
+       "      <td>1118</td>\n",
+       "      <td>98</td>\n",
+       "      <td>-405</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>117</td>\n",
+       "      <td>6</td>\n",
+       "      <td>330</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.406436</td>\n",
+       "      <td>0.000446</td>\n",
+       "      <td>0.593118</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.421489</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2_2014-01-01</td>\n",
+       "      <td>-15.858835</td>\n",
+       "      <td>29.737029</td>\n",
+       "      <td>1067</td>\n",
+       "      <td>137</td>\n",
+       "      <td>-468</td>\n",
+       "      <td>1204</td>\n",
+       "      <td>111</td>\n",
+       "      <td>6</td>\n",
+       "      <td>194</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.254791</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.745209</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.419122</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3_2014-01-01</td>\n",
+       "      <td>-15.858835</td>\n",
+       "      <td>29.987029</td>\n",
+       "      <td>969</td>\n",
+       "      <td>187</td>\n",
+       "      <td>-533</td>\n",
+       "      <td>1156</td>\n",
+       "      <td>101</td>\n",
+       "      <td>5</td>\n",
+       "      <td>78</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.219340</td>\n",
+       "      <td>0.182153</td>\n",
+       "      <td>0.598507</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.404596</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4_2014-01-01</td>\n",
+       "      <td>-15.858835</td>\n",
+       "      <td>30.237029</td>\n",
+       "      <td>927</td>\n",
+       "      <td>270</td>\n",
+       "      <td>-505</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>96</td>\n",
+       "      <td>5</td>\n",
+       "      <td>139</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.220239</td>\n",
+       "      <td>0.097748</td>\n",
+       "      <td>0.682013</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.371100</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ID        lat        lon  climate_aet  climate_def  climate_pdsi  \\\n",
+       "0  0_2014-01-01 -15.858835  29.237029         1146           74          -451   \n",
+       "1  1_2014-01-01 -15.858835  29.487029         1118           98          -405   \n",
+       "2  2_2014-01-01 -15.858835  29.737029         1067          137          -468   \n",
+       "3  3_2014-01-01 -15.858835  29.987029          969          187          -533   \n",
+       "4  4_2014-01-01 -15.858835  30.237029          927          270          -505   \n",
+       "\n",
+       "   climate_pet  climate_pr  climate_ro  climate_soil  ...  landcover_3  \\\n",
+       "0         1220         120           6           212  ...          0.0   \n",
+       "1         1216         117           6           330  ...          0.0   \n",
+       "2         1204         111           6           194  ...          0.0   \n",
+       "3         1156         101           5            78  ...          0.0   \n",
+       "4         1197          96           5           139  ...          0.0   \n",
+       "\n",
+       "   landcover_4  landcover_5  landcover_6  landcover_7  landcover_8  \\\n",
+       "0     0.416704     0.023724     0.530016     0.013524          0.0   \n",
+       "1     0.406436     0.000446     0.593118     0.000000          0.0   \n",
+       "2     0.254791     0.000000     0.745209     0.000000          0.0   \n",
+       "3     0.219340     0.182153     0.598507     0.000000          0.0   \n",
+       "4     0.220239     0.097748     0.682013     0.000000          0.0   \n",
+       "\n",
+       "   precipitation       date  month  year  \n",
+       "0       0.404243 2014-01-01      1  2014  \n",
+       "1       0.421489 2014-01-01      1  2014  \n",
+       "2       0.419122 2014-01-01      1  2014  \n",
+       "3       0.404596 2014-01-01      1  2014  \n",
+       "4       0.371100 2014-01-01      1  2014  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 25584 entries, 0 to 25583\n",
+      "Data columns (total 31 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   ID             25584 non-null  object        \n",
+      " 1   lat            25584 non-null  float64       \n",
+      " 2   lon            25584 non-null  float64       \n",
+      " 3   climate_aet    25584 non-null  int64         \n",
+      " 4   climate_def    25584 non-null  int64         \n",
+      " 5   climate_pdsi   25584 non-null  int64         \n",
+      " 6   climate_pet    25584 non-null  int64         \n",
+      " 7   climate_pr     25584 non-null  int64         \n",
+      " 8   climate_ro     25584 non-null  int64         \n",
+      " 9   climate_soil   25584 non-null  int64         \n",
+      " 10  climate_srad   25584 non-null  int64         \n",
+      " 11  climate_swe    25584 non-null  int64         \n",
+      " 12  climate_tmmn   25584 non-null  int64         \n",
+      " 13  climate_tmmx   25584 non-null  int64         \n",
+      " 14  climate_vap    25584 non-null  int64         \n",
+      " 15  climate_vpd    25584 non-null  int64         \n",
+      " 16  climate_vs     25584 non-null  int64         \n",
+      " 17  elevation      25584 non-null  float64       \n",
+      " 18  landcover_0    25584 non-null  float64       \n",
+      " 19  landcover_1    25584 non-null  float64       \n",
+      " 20  landcover_2    25584 non-null  float64       \n",
+      " 21  landcover_3    25584 non-null  float64       \n",
+      " 22  landcover_4    25584 non-null  float64       \n",
+      " 23  landcover_5    25584 non-null  float64       \n",
+      " 24  landcover_6    25584 non-null  float64       \n",
+      " 25  landcover_7    25584 non-null  float64       \n",
+      " 26  landcover_8    25584 non-null  float64       \n",
+      " 27  precipitation  25584 non-null  float64       \n",
+      " 28  date           25584 non-null  datetime64[ns]\n",
+      " 29  month          25584 non-null  int32         \n",
+      " 30  year           25584 non-null  int32         \n",
+      "dtypes: datetime64[ns](1), float64(13), int32(2), int64(14), object(1)\n",
+      "memory usage: 5.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Ensure the test features match the training features\n",
+    "test_features = test_df.drop(columns=['ID','month','year','lat','lon','date'])  # Drop the ID column\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "test_preds = model.predict((test_features).fillna(0))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#  submission DataFrame with ID and predicted burn_area\n",
+    "submission = pd.DataFrame({\n",
+    "    'ID': test_df['ID'],\n",
+    "    'burn_area': test_preds\n",
+    "})\n",
+    "\n",
+    "# Save the submission DataFrame to a CSV file\n",
+    "submission.to_csv('submission.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Boosting Regressor\n",
+    "The gradient boosting regressor builds the trees sequentially"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mse ofRandomForestRegressor: 0.000684954009745982\n",
+      "r2_score of RandomForestRegressor: <function r2_score at 0x00000240868D3420>\n",
+      "rmse of RandomForestRegressor: 0.026171626043216763\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "gmodel=GradientBoostingRegressor(n_estimators=10,learning_rate=0.1,max_depth=3,random_state=42)\n",
+    "gmodel.fit(X_train,y_train)\n",
+    "\n",
+    "preds=gmodel.predict(X_valid)\n",
+    "\n",
+    "#score\n",
+    "mse= mean_squared_error(y_valid,preds)\n",
+    "r2=r2_score(y_valid,preds)\n",
+    "rmse= np.sqrt(mse)\n",
+    "\n",
+    "print('mse ofRandomForestRegressor:',mse)\n",
+    "print(\"r2_score of RandomForestRegressor:\",r2_score)\n",
+    "print(\"rmse of RandomForestRegressor:\",rmse)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The gradient boosting regressor has a higher `RMSE` compared to the random forest regressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
